fixed constructor codegen